fix nav bar animation by adding overlay with higher z-index

--- a/frontend/components/theme.css
+++ b/frontend/components/theme.css
@@ -5,10 +5,6 @@
   padding: var(--padding);
 }
 
-.mainContainer {
-  padding: var(--mainContainerPadding);
-}
-
 .imageContainer {
   margin: var(--negativeMargin);
 }
