--- a/frontend/components/ui/nav-bar/style.css
+++ b/frontend/components/ui/nav-bar/style.css
@@ -4,6 +4,23 @@
   composes: activeButton from "../../theme-buttons.css";
 }
 
+.menuSpace {
+  display: none;
+}
+
+.navBar .menuSpace {
+  @media (--mobile-viewport) {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--backgroundColor);
+    z-index: 2;
+  }
+}
+
 .navBar .menu {
   display: inline;
 
@@ -22,7 +39,7 @@
     transition: transform .2s,opacity .2s;
     will-change: opacity, transform;
     pointer-events: none;
-    z-index: -1;
+    z-index: 1;
   }
 }
 
@@ -35,7 +52,8 @@
 }
 
 .menu > a, .menu > button {
-  margin-right: 20px;
+  margin-right: 10px;
+
   @media (--mobile-viewport) {
     margin-right: 0;
   }
@@ -45,6 +63,10 @@
     display: block;
     text-align: center;
   }
+}
+
+.head {
+  z-index: 3;
 }
 
 .navBar .head {
